--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-chatbot-kit": "^2.2.2",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
