--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ faiss-cpu==1.10.0
 langchain-openai==0.3.9
 openai==1.68.2
 langchain-community==0.2.1
-langchain-core==0.2.4
+langchain-core==0.3.45  # Updated to match langchain-openai's requirement
 langchain==0.2.1
 python-dotenv==1.0.1
 flask==3.0.3
@@ -11,3 +11,4 @@ pypdf==5.4.0
 PyMuPDF==1.25.4
 tiktoken==0.9.0
 protobuf==4.25.3
+numpy==1.26.4  # Explicit version for faiss compatibility
