--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
 flask-cors==5.0.1
 faiss-cpu==1.10.0
-langchain-openai==0.1.6  # Downgraded to match other components
+langchain-openai # Downgraded to match other components
 openai==1.68.2
 langchain-community==0.2.1
-langchain-core==0.2.4    # Compatible with community 0.2.1
+langchain-core    # Compatible with community 0.2.1
 langchain==0.2.1
 python-dotenv==1.0.1
 flask==3.0.3
