--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,13 @@ protobuf==4.25.3
 numpy==1.26.4
 gunicorn
 greenlet==3.0.3
+gevent==24.2.0
+
+# Additional essential packages
+eventlet==0.35.1  # Alternative async worker
+click==8.1.7      # Required by Flask
+itsdangerous==2.2.0  # Security dependency
+Werkzeug==3.0.3   # WSGI utility
+Jinja2==3.1.4     # Templating engine
+MarkupSafe==2.1.5 # HTML escaping
+typing_extensions==4.11.0  # Type hints support
