--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
 flask-cors==5.0.1
 faiss-cpu==1.10.0
-langchain-openai==0.1.6  # Explicit version to avoid conflicts
+langchain-openai==0.1.6
 openai==1.68.2
 langchain-community==0.2.1
-langchain-core==0.2.4  # Must match community 0.2.1
+langchain-core==0.1.46  # Change this line to be compatible with langchain-openai
 langchain==0.2.1
 python-dotenv==1.0.1
 flask==3.0.3
@@ -14,9 +14,7 @@ protobuf==4.25.3
 numpy==1.26.4
 gunicorn==23.0.0
 greenlet==3.0.3
-gevent==24.2.1  # Corrected version
-
-# Additional critical dependencies
+gevent==24.2.1
 Werkzeug==3.0.3
 click==8.1.7
 Jinja2==3.1.4
