--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
 flask-cors==5.0.1
 faiss-cpu==1.10.0
-langchain-openai==0.0.8
+langchain-openai==0.1.0
 openai==1.68.2
-langchain-community==0.0.16
-langchain-core==0.1.28
+langchain-community==0.1.0
+langchain-core==0.1.30
 langchain==0.1.16
+langsmith==0.1.0
 python-dotenv==1.0.1
 flask==3.0.3
 pypdf==5.4.0
